igw.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.rda_vpc.id
  tags = {
    Name = "${var.name}-igw"
  }
}
